testsuite/tests/backpack/should_fail/all.T
test('bkpfail01', [javascript_failures, normal], backpack_typecheck_fail, [''])
test('bkpfail03', [javascript_failures, normal], backpack_typecheck_fail, [''])
test('bkpfail04', [javascript_failures, normal], backpack_typecheck_fail, [''])
test('bkpfail05', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail06', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail07', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail09', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail10', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail11', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail12', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail13', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail14', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail15', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail16', [javascript_failures, normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail17', [javascript_failures, normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail18', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail19', [javascript_failures, normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail20', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail21', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail22', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail23', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail24', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail25', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail26', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail27', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail28', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail29', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail30', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail31', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail32', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail33', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail34', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail35', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail36', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail37', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail38', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail39', [javascript_failures, expect_broken(13068)], backpack_compile_fail, [''])
test('bkpfail40', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail41', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail42', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail43', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail44', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail45', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail46', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail47', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail48', [javascript_failures, normal], backpack_compile_fail, [''])
test('bkpfail49', [javascript_failures, normal], backpack_compile_fail, [''])
